Adding angular 7 build

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,5 +10,5 @@
 <link rel="stylesheet" href="styles.5e128783ca5921bd1c39.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.a485d3ea7bb781faf196.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.ea9a7b51b5073e2a08c5.js"></script><script type="text/javascript" src="main.1bade0fb1d9baa3f8440.js"></script></body>
+<script type="text/javascript" src="js/runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="js/es2015-polyfills.a485d3ea7bb781faf196.js" nomodule></script><script type="text/javascript" src="js/polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="js/scripts.ea9a7b51b5073e2a08c5.js"></script><script type="text/javascript" src="js/main.9e1915fee3fe939d8815.js"></script></body>
 </html>
