Adding angular 7 build

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,9 +6,9 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.5e128783ca5921bd1c39.css"></head>
+  <link rel="icon" type="image/x-icon" href="res/favicon.ico">
+<link rel="stylesheet" href="res/styles.5e128783ca5921bd1c39.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="js/runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="js/es2015-polyfills.a485d3ea7bb781faf196.js" nomodule></script><script type="text/javascript" src="js/polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="js/scripts.ea9a7b51b5073e2a08c5.js"></script><script type="text/javascript" src="js/main.9e1915fee3fe939d8815.js"></script></body>
+<script type="text/javascript" src="res/runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="res/es2015-polyfills.a485d3ea7bb781faf196.js" nomodule></script><script type="text/javascript" src="res/polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="res/scripts.ea9a7b51b5073e2a08c5.js"></script><script type="text/javascript" src="res/main.60f2d4450d5bd213cc0c.js"></script></body>
 </html>
